--- a/carto_widget/style.css
+++ b/carto_widget/style.css
@@ -6,6 +6,7 @@ body {
     display: none;
 }
 .loader {
+    display:none;
     -webkit-animation: spin 3s linear infinite;
     -moz-animation: spin 3s linear infinite;
     animation: spin 3s linear infinite;
@@ -37,8 +38,8 @@ body {
 .LogoBlack {
     z-index: 999;
     position: fixed;
-    bottom: 10px;
-    left: 10px;
+    top: 10px;
+    right: 10px;
     width: 124px;
     height: 31px;
 }
@@ -114,6 +115,7 @@ P {
     margin: 0px;
     width: 50%;
     z-index: 999999;
+    font-weight: lighter;
     cursor: default;
 }
 #maxamize {
@@ -125,6 +127,8 @@ P {
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     padding: 0px;
     margin: 0px;
+    height:10%;
+    margin-bottom:30px;
     cursor: default;
     width: 49%;
     height: 10px;
